flapivor/tests/m3/hopix/typechecker/bad/17-invalid-function-call-03.hopix
def f : String -> Int (x) = x

val main : Int = f (0)